[package]
name = "fpcoa"
version = "0.1.1"
edition = "2024"
authors = ["jianshuzhao@yahoo.com"]
repository = "https://github.com/jianshu93/fpcoa"
keywords = ["SVD", "PCoA", "PCA", "Sketching", "mds"]
license = "MIT OR Apache-2.0"
description = "Fast PCoA based on randomized SVD"


[dependencies]
ndarray = { version = "0.17.1", features = ["rayon", "serde"] }
lax = { version = "0.17" }
annembed = { version = "0.1.5" }
rayon = "1.10"
nalgebra = "0.33"


[dev-dependencies]
pcoa = "0.1.2"


[features]
default = []

intel-mkl-static = [
    "ndarray/blas",
    "lax/intel-mkl-static",
    "annembed/intel-mkl-static",
]

openblas-static = [
    "ndarray/blas",
    "lax/openblas-static",
    "annembed/openblas-static",
]

openblas-system = [
    "ndarray/blas",
    "lax/openblas-system",
    "annembed/openblas-system",
]

macos-accelerate = ["annembed/macos-accelerate"]